--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="manifest" href="/manifest.json">
+<script>
+  if ("serviceWorker" in navigator) {
+    navigator.serviceWorker.register("/sw.js");
+  }
+</script>
+
   <link rel="manifest" href="/manifest.json">
   <link rel="icon" type="image/png" href="/icons/app-icon.png">
   <meta name="theme-color" content="#6b3eff">
